Fix for deal images that are too wide

--- a/public/stylesheets/web.css
+++ b/public/stylesheets/web.css
@@ -657,7 +657,10 @@ td, th{padding:0;}
 	margin:2px 10px 0;
 }
 * html .info-area .img{margin-left:7px;}
-.info-area .img img{display:block;}
+.info-area .img img{
+	display:block;
+	max-width:320px;
+}
 /* info box */
 .info-box{overflow:hidden;}
 * html .info-box{
